# dolphin

./: CMakeLists.txt  README.md
include/: Image.h  MainWindow.h  Mouse.h  api.h
rc/: icon.rc  resources.qrc
src/: Image.cpp  MainWindow.cpp  Mouse.cpp  api.cpp  main.cpp
